--- a/ts-project/package.json
+++ b/ts-project/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,5 +14,8 @@
   "devDependencies": {
     "@types/node": "^24.2.0",
     "typescript": "^5.9.2"
+  },
+  "dependencies": {
+    "uuid": "^11.1.0"
   }
 }
