--- a/ts-project/package.json
+++ b/ts-project/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
+    "dev:generics": "npm run build && node dist/generics.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,6 +17,7 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "uuid": "^11.1.0"
   }
 }
